# flask_application

./: Makefile  pyproject.toml  settings.toml
app/: routes.py
app/templates/home/: index.html
app/views/: home.py
test/: visitors_view_home_page_test.py
