[tool.poetry]
name = "flask_application"
version = "1.0.0"
description = "Uma aplicação criada na mentoria do CaravanaCloud"
authors = ["Marcus Pereira <marcus@negros.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
dynaconf = "^3.1.7"

[tool.poetry.dev-dependencies]
ward = "^0.65.0-beta.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
